changed text files

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>The Calculator</title>
+<title>My Calculator</title>
 	<link rel="stylesheet" href="style.css">
 	<script src="script.js"></script>
 </head>
