--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="row">
 					<input type="button" name="clear" value="C" onClick="form.displayResult.value = ''">
 	 				 <input type="button" name="per" value="%" onClick="percentage()">
-	 				 <input type="button" name="back" value="&#x2612;" onClick="backspace()">
+	 				 <input type="button" name="back" value="&#x21e6;" onClick="backspace()">
 					 			<input type="button" name="div" value="/" onClick="calcNumbers(div.value)">
 				</div>
 
