--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head>
 <meta charset="utf-8">
 <title></title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="style.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="script.js"></script>
 </head>
 
@@ -14,7 +14,7 @@
 
 		<div class="display">
 			<input type="text" id="input" placeholder="0" name="displayResult" />
-		</div>
+	</div>
 			<div class="buttons">
 
 					<input type="button" name="clear" value="C" onClick="form.displayResult.value = ''">
@@ -48,8 +48,7 @@
 					<input type="button" name="b0" value="0" onClick="calcNumbers(b0.value)">
 					<input type="button" name="b00" value="00" onClick="calcNumbers(b00.value)">
 				<input type="button" name="potb" value="." onClick="calcNumbers(potb.value)">
-					<input type="button" name="equal" value="=" onClick="displayResult.value=eval(displayResult.value)">
-
+    		<input type="button" name="equal" value="=" onClick="solve()">
 			</div>
 
 		</form>
